--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation 'de.gesundkrank.fzf4j:fzf4j:0.2.0'
     implementation 'org.buildobjects:jproc:2.8.2'
 
+    implementation("dev.langchain4j:langchain4j-open-ai:1.0.1")
+
 // https://mvnrepository.com/artifact/io.github.tree-sitter/jtreesitter
     //implementation("io.github.tree-sitter:jtreesitter:0.25.4")
 
